tests/baselines/reference/unionTypesAssignability.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(18,1): error TS2741: Property 'foo1' is missing in type 'E' but required in type 'D'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(19,1): error TS2322: Type 'D | E' is not assignable to type 'D'.
  Type 'E' is not assignable to type 'D'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(20,1): error TS2741: Property 'foo2' is missing in type 'D' but required in type 'E'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(22,1): error TS2322: Type 'D | E' is not assignable to type 'E'.
  Type 'D' is not assignable to type 'E'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(24,1): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(25,1): error TS2322: Type 'string | number' is not assignable to type 'number'.
  Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(26,1): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(28,1): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(31,1): error TS2741: Property 'foo1' is missing in type 'C' but required in type 'D'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(32,1): error TS2741: Property 'foo2' is missing in type 'C' but required in type 'E'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(33,1): error TS2322: Type 'C' is not assignable to type 'D | E'.
  Type 'C' is not assignable to type 'E'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(35,1): error TS2322: Type 'D' is not assignable to type 'E'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(37,1): error TS2322: Type 'E' is not assignable to type 'D'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(41,1): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(43,1): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(64,5): error TS2322: Type 'U' is not assignable to type 'T'.
  'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(65,5): error TS2322: Type 'T' is not assignable to type 'U'.
  'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(70,5): error TS2322: Type 'T | U' is not assignable to type 'T'.
  'T | U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
    Type 'U' is not assignable to type 'T'.
      'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts(71,5): error TS2322: Type 'T | U' is not assignable to type 'U'.
  'T | U' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
    Type 'T' is not assignable to type 'U'.
      'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts (19 errors) ====
    var unionNumberString: number | string;
    class C { }
    class D extends C { foo1() { } }
    class E extends C { foo2() { } }
    var unionDE: D | E;
    
    var num: number;
    var str: string;
    var c: C;
    var d: D;
    var e: E;
    
    // A union type U is assignable to a type T if each type in U is assignable to T
    c = d;
    c = e;
    c = unionDE; // ok
    d = d;
    d = e;
    ~
!!! error TS2741: Property 'foo1' is missing in type '{|E|0|}' but required in type '{|D|1|}'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:21: 'foo1' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
    d = unionDE; // error e is not assignable to d
    ~
!!! error TS2322: Type '{|D|0|} | {|E|1|}' is not assignable to type '{|D|2|}'.
!!! error TS2322:   Type '{|E|3|}' is not assignable to type '{|D|4|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
    e = d;
    ~
!!! error TS2741: Property 'foo2' is missing in type '{|D|0|}' but required in type '{|E|1|}'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:21: 'foo2' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
    e = e;
    e = unionDE; // error d is not assignable to e
    ~
!!! error TS2322: Type '{|D|0|} | {|E|1|}' is not assignable to type '{|E|2|}'.
!!! error TS2322:   Type '{|D|3|}' is not assignable to type '{|E|4|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
    num = num;
    num = str;
    ~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    num = unionNumberString; // error string is not assignable to number
    ~~~
!!! error TS2322: Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    str = num;
    ~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    str = str;
    str = unionNumberString; // error since number is not assignable to string
    ~~~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    
    // A type T is assignable to a union type U if T is assignable to any type in U
    d = c;
    ~
!!! error TS2741: Property 'foo1' is missing in type '{|C|0|}' but required in type '{|D|1|}'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:21: 'foo1' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:2:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
    e = c;
    ~
!!! error TS2741: Property 'foo2' is missing in type '{|C|0|}' but required in type '{|E|1|}'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:21: 'foo2' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:2:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
    unionDE = c; // error since C is not assinable to either D or E
    ~~~~~~~
!!! error TS2322: Type '{|C|0|}' is not assignable to type '{|D|1|} | {|E|2|}'.
!!! error TS2322:   Type '{|C|3|}' is not assignable to type '{|E|4|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:2:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:2:7
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
    d = d;
    e = d;
    ~
!!! error TS2322: Type '{|D|0|}' is not assignable to type '{|E|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
    unionDE = d; // ok
    d = e;
    ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|D|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:4:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:3:7
    e = e;
    unionDE = e; // ok
    num = num;
    str = num;
    ~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    unionNumberString = num; // ok 
    num = str;
    ~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    str = str;
    unionNumberString = str; // ok
    
    // Any
    var anyVar: any;
    anyVar = unionDE;
    anyVar = unionNumberString;
    unionDE = anyVar;
    unionNumberString = anyVar;
    
    // null
    unionDE = null;
    unionNumberString = null;
    
    // undefined
    unionDE = undefined;
    unionNumberString = undefined;
    
    // type parameters
    function foo<T, U>(t: T, u: U) {
        t = u; // error
        ~
!!! error TS2322: Type '{|U|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|U|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
        u = t; // error
        ~
!!! error TS2322: Type '{|T|0|}' is not assignable to type '{|U|1|}'.
!!! error TS2322:   '{|T|2|}' is assignable to the constraint of type '{|U|3|}', but '{|U|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
        var x : T | U;
        x = t; // ok
        x = u; // ok
        x = undefined;
        t = x; // error U not assignable to T
        ~
!!! error TS2322: Type '{|T|0|} | {|U|1|}' is not assignable to type '{|T|2|}'.
!!! error TS2322:   '{|T|3|} | {|U|4|}' is assignable to the constraint of type '{|T|5|}', but '{|T|6|}' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:     Type '{|U|7|}' is not assignable to type '{|T|8|}'.
!!! error TS2322:       '{|U|9|}' is assignable to the constraint of type '{|T|10|}', but '{|T|11|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
        u = x; // error T not assignable to U
        ~
!!! error TS2322: Type '{|T|0|} | {|U|1|}' is not assignable to type '{|U|2|}'.
!!! error TS2322:   '{|T|3|} | {|U|4|}' is assignable to the constraint of type '{|U|5|}', but '{|U|6|}' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:     Type '{|T|7|}' is not assignable to type '{|U|8|}'.
!!! error TS2322:       '{|T|9|}' is assignable to the constraint of type '{|U|10|}', but '{|U|11|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:14
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/unionTypesAssignability.ts:63:17
    }
    